# archive-35.com

./: .cfignore  .gitignore  .studio-sync-config.json  Archive-35_Agent_Handover.docx  Archive-35_Pipeline_Audit.docx  Archive-35_Session_Architecture.docx  Archive-35_Session_Handover_Feb15.md  Archive35-3D-Film-Strip-Asset-Brief.docx  CLAUDE.md  ChatGPT_Panoramic_Room_Prompts.docx  DISCOVERY.md  Etsy-Photo-Upload-Reference.docx  Etsy_API_Key_403_Support_Email.docx  FINAL-BUILD.md  FIX_GIT_AND_PUSH.command  MICRO-DELIVERY.md  MORNING-FIXES.md  Mockup_Room_Download_Guide.docx  Mockup_Room_Environment_Research.docx  OVERNIGHT-BUILD.md  PHASE-3-EMAIL-MCP.md  PHASE-4-DASHBOARD-V2.md  PHASE-7-DATA-INTELLIGENCE.md  PHASE-8-FIX-EVERYTHING.md  PIPELINE_V3_REWRITE.md  Pictorem_Call_Prep_Sheet.docx  Pictorem_Complete_Product_Catalog.docx  Pictorem_Integration_Handover.docx  Pictorem_Platform_Implementation_Plan.docx  SETUP_STRIPE.command  STATUS.md  _headers  _routes.json  about.html  account.html  agent-dashboard.html  archive35_mcp.py  build.sh  collection.html  contact.html  (+23 more)
06_Automation/: Etsy-Listings-Session-Handoff-2026-02-25.docx  Large_Scale_Origin_Mapping.docx  MCP_README.md  README.md  archive35_commerce_mcp.py  archive35_mcp.py  artelo_sync.py  caption_generator.py  config.yaml  large_scale_origin_mapping.js  post_scheduler.py  pyproject.toml  queue_manager.py  requirements.txt  server.json
06_Automation/archive35-photo-quality-mcp/: README.md  pyproject.toml  requirements.txt
06_Automation/email_mcp/: email_mcp.py
06_Automation/scripts/: ai_broadcast.py  embed_iptc_metadata.py  expand_catalog.py  generate_micro_versions.py  indexnow_ping.py  inject_schema.py  pictorem_api.py  pinterest_pin_generator.py  prepare_micro_license.py  stripe_payment_links.json  stripe_products.json  stripe_setup.py  submit_order.py  test_pictorem.py
Archive 35 Agent/: .dockerignore  CLAUDE.md  DOCKER.md  Dockerfile  README.md  docker-compose.yml  docker-start.sh  fix_rate_limit.py  pyproject.toml  requirements.txt
Archive 35 Agent/data/: archive35.db
Archive 35 Agent/docs/: AGENT_MASTER_HANDOVER.md  ARCHITECTURE.md  AUTONOMOUS_RUN_MARCH16.md  BRAND_VOICE.md  BUILD_TRACKER.md  COGS_TABLE.md  COST_MODEL.md  COWORKER_OVERNIGHT_PROMPT.md  DEPENDENCIES.md  INSTAGRAM_CAPTION_RULES.md  LISTING_REWRITE_BRIEF.md  PARALLEL_SPRINT_BRIEF.md  SESSION_LOG.md
Archive 35 Agent/logs/: agent_2026-03-19.log.2026-03-19  agent_2026-03-20.log.2026-03-20  agent_2026-03-20.log.2026-03-22  (+1 more)
(+923 files in other folders)
